WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259718
LocalFrameView::textFragmentIndicatorTimerFired() should not use RenderFlexibleBox::absoluteTextRects()
https://bugs.webkit.org/show_bug.cgi?id=259718
Summary
LocalFrameView::textFragmentIndicatorTimerFired() should not use RenderFlexib...
Simon Fraser (smfr)
Reported
2023-08-01 18:02:41 PDT
absoluteTextRects() is a static function on RenderObject, so just use that.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-01 18:02:58 PDT
<
rdar://problem/113239175
>
Simon Fraser (smfr)
Comment 2
2023-08-01 18:04:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16300
EWS
Comment 3
2023-08-02 08:47:13 PDT
Committed
266512@main
(f3a7c01df2b5): <
https://commits.webkit.org/266512@main
> Reviewed commits have been landed. Closing PR #16300 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug