LocalFrameView::textFragmentIndicatorTimerFired() should not use RenderFlexibleBox::absoluteTextRects() https://bugs.webkit.org/show_bug.cgi?id=259718 rdar://113239175

Reviewed by Richard Robinson.

We can use use RenderObject::absoluteTextRects(). Also do a bit of tidyup, moving the `!localMainFrame`
early return up, and using more `auto`.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::textFragmentIndicatorTimerFired):

Canonical link: https://commits.webkit.org/266512@main